--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -1,9 +1,58 @@
-body {
+html {
   margin: 0;
   padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
+  min-width: 400px;
+}
+
+body {
+  background-color: $teal;
+  color: $dark-purple;
+  font-family: "Montserrat", "Roboto", -apple-system, BlinkMacSystemFont, sans-serif;
+  margin: 0;
+  padding: 0;
   -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+}
+
+*:focus {
+   outline: none;
+}
+
+.main-background {
+  background-color: $light-purple;
+  margin: 0;
+  min-height: 415px;
+  padding: 30px 2em;
+
+  .main-container {
+    margin: 0 auto;
+  }
+}
+
+// iPhone X
+@media only screen and (min-height: 812px) {
+
+  .main-background {
+    min-height: 550px;
+  }
+}
+
+// iPad
+@media only screen and (min-width: 768px) {
+
+  .main-background {
+    min-height: 700px;
+
+    .main-container {
+      max-width: 708px;
+    }
+  }
+}
+
+// iPad Pro
+@media only screen and (min-height: 1366px) {
+
+  .main-background {
+    min-height: 1100px;
+  }
 }
