--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,3 +1,8 @@
 @import 'normalize';
+@import 'variables';
+@import 'mixins';
 @import 'App';
 @import 'Nav';
+@import 'Cat';
+@import 'Flashcard';
+@import 'AnswerInput';
