Style Dropdown menu

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -3,6 +3,7 @@
 @import 'mixins';
 @import 'App';
 @import 'Nav';
+@import 'Dropdown';
 @import 'Cat';
 @import 'Flashcard';
 @import 'AnswerInput';
