Display answer on submit

--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -9,8 +9,9 @@ $light-purple: #F2F2F2;
 $pink: #FD6E72; // cat nose color
 $purple: #745260; // cat color
 $teal: #ABE7DB; // cat background color
+$dark-teal: #41A893;
 
 // Borders
 $purple-border: 4px solid $purple;
 $rounded-border: 3px;
-$subtle-shadow: 3px 3px 1px rgba(0, 0, 0, 0.2);
+$subtle-shadow: -3px 3px 1px rgba(0, 0, 0, 0.2);
