--- a/src/scss/AnswerInput.scss
+++ b/src/scss/AnswerInput.scss
@@ -30,4 +30,19 @@
       border: $purple-border;
     }
   }
+
+  .submit-btn {
+    background-color: #999;
+    border-radius: $rounded-border;
+    color: white;
+    font-size: 1.2em;
+    font-weight: 600;
+    margin: 15px 0 0 0;
+    padding: 16px;
+    text-align: center;
+
+    &:hover {
+      background-color: $purple;
+    }
+  }
 }
