--- a/src/scss/Flashcard.scss
+++ b/src/scss/Flashcard.scss
@@ -9,6 +9,11 @@
     padding: 0 20px;
     text-align: center;
   }
+
+  .Flashcard-answer {
+    font-size: 1.2em;
+    padding: 20px;
+  }
 }
 
 // iPad
