Add buttons to useranswer

--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -4,12 +4,14 @@
 $black: #333333;
 $cream: #FDF9DE;
 $dark-purple: #351924;
+$dark-teal: #41A893;
+$green: #447F00;
 $grey: #74919F;
 $light-purple: #F2F2F2;
-$pink: #FD6E72; // cat nose color
-$purple: #745260; // cat color
-$teal: #ABE7DB; // cat background color
-$dark-teal: #41A893;
+$pink: #FD6E72;
+$purple: #745260;
+$red: #db1818;
+$teal: #ABE7DB;
 
 // Borders
 $purple-border: 4px solid $purple;
