--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -7,6 +7,7 @@ $dark-purple: #351924;
 $dark-teal: #41A893;
 $green: #447F00;
 $grey: #74919F;
+$light-green: #64AA01;
 $light-purple: #F2F2F2;
 $pink: #FD6E72;
 $purple: #745260;
