--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -5,6 +5,7 @@
 @import 'Nav';
 @import 'Dropdown';
 @import 'Cat';
+@import 'Instructions';
 @import 'Flashcard';
 @import 'AnswerInput';
 @import 'UserAnswer';
