--- a/src/scss/AnswerInput.scss
+++ b/src/scss/AnswerInput.scss
@@ -35,11 +35,13 @@
     background-color: #999;
     border-radius: $rounded-border;
     color: white;
+    font-family: 'Montserrat';
     font-size: 1.2em;
     font-weight: 600;
     margin: 15px 0 0 0;
     padding: 16px;
     text-align: center;
+    width: 100%;
 
     &:hover {
       background-color: $purple;
