--- a/src/scss/Dropdown.scss
+++ b/src/scss/Dropdown.scss
@@ -1,9 +1,3 @@
-.bars-active {
-  background-color: white;
-  border-radius: 3px 3px 0 0;
-  color: $pink;
-}
-
 .Dropdown {
   background-color: white;
   border-radius: $rounded-border;
@@ -12,7 +6,7 @@
   font-size: 1.3em;
   font-weight: 600;
   position: fixed;
-  right: 25px;
+  right: 15px;
   top: 55px;
 
   ul {
@@ -34,6 +28,7 @@
       &:hover {
         background-color: $pink;
         color: white;
+        cursor: pointer;
       }
     }
   }
